now can write a user to file

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -16,8 +16,11 @@
             </div>
         </div>
         <div class="container">
-            <a href="/ta06/register">Register</a>
-            <a href="/ta06/login">Login</a>
+            <form action="/ta06/login" method="POST">
+                <input type="email" name="email" required placeholder="Email">
+                <input type="password" name="password" required placeholder="Password">
+                <button type="submit">Login</button>
+            </form>
         </div>
 </body>
 
