--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -16,8 +16,12 @@
             </div>
         </div>
         <div class="container">
-            <a href="/ta06/register">Register</a>
-            <a href="/ta06/login">Login</a>
+            <form action="/ta06/register" method="POST">
+                <input type="email" name="email" required placeholder="Email">
+                <input type="password" name="password" required placeholder="Password">
+                <input type="password" name="confirmPassword" required placeholder="Confirm Password">
+                <button type="submit">Register</button>
+            </form>
         </div>
 </body>
 
